# enhanced-radio-comm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  setup.sh
demo-hardware/: HEATSINK14x14.ipt  HEATSINK9x9.ipt  PiMountBracket.ipt  RemoteCameraModule.iam  RemoteCasing.ipt  RemoteCasingBackCover.ipt  RemoteDisplayMount.ipt
demo-hardware/Control Enclosure/: AZI_RasPi_Z2W_op1A_rev1_top.stl
demo-hardware/Exports/: PiMountBracket.3mf  PiMountBracket.stl  RemoteCasing.stl  RemoteCasingBackCover.stl  RemoteDisplayMount.stl
demo-hardware/Kiwi Drivebase/: DoombaMk1Base.stl
demo-hardware/Kiwi Drivebase/src/: DoombaMainAssy.iam  DoombaMk1Base.ipt  MotorMount.ipt
demo-hardware/Kiwi Drivebase/src/Buyouts/: N20_motor_clamp_with_gear_cover_lateral_v2.stl
demo-hardware/Kiwi Drivebase/src/OldVersions/: DoombaMainAssy.0006.iam  DoombaMk1Base.0006.ipt  MainAssy.0002.iam  MotorMount.0006.ipt
demo-hardware/Kiwi Drivebase/src/OmniWheels/: 5Wheel.ipt  5WheelAssy.iam  5wheelroller.ipt
demo-hardware/OldVersions/: HEATSINK14x14.0003.ipt  HEATSINK9x9.0001.ipt  PiMountBracket.0001.ipt  PiMountBracket.0005.ipt  PiMountBracket.0007.ipt  PiMountBracket.0009.ipt  RemoteCameraModule.0002.iam  RemoteCameraModule.0004.iam  RemoteCameraModule.0006.iam  RemoteCameraModule.0010.iam  RemoteCameraModule.0016.iam  RemoteCameraModule.0022.iam  RemoteCameraModule.0024.iam  RemoteCameraModule.0025.iam  RemoteCasing.0001.ipt  RemoteCasing.0004.ipt  RemoteCasing.0010.ipt  RemoteCasing.0018.ipt  RemoteCasing.0022.ipt  RemoteCasing.0024.ipt  RemoteCasing.0026.ipt  RemoteCasing.0027.ipt  RemoteCasingBackCover.0004.ipt  RemoteCasingBackCover.0016.ipt  RemoteCasingBackCover.0018.ipt
demo-hardware/Remote Enclosure/: README.txt  RemoteCasingBackCover.stl
demo-hardware/Remote Enclosure/src/: PiMountBracket.ipt  RemoteCameraModule.iam  RemoteCasing.ipt  RemoteCasingBackCover.ipt
demo-hardware/Remote Enclosure/src/M3-Threaded-Insert/: Insert M3 D5 L5mm.ipt
demo-hardware/Remote Enclosure/src/OPiZ2W_/: OPiZ2W_.ipt
demo-hardware/Remote Enclosure/src/OldVersions/: PiMountBracket.0010.ipt  RemoteCameraModule.0029.iam  RemoteCameraModule.0031.iam  RemoteCasing.0029.ipt
demo-hardware/Remote Enclosure/src/Photos/: RemoteCameraModule.ipn
demo/New_Stream/Control/: compileGuide-arm64  toolchain-arm64.cmake
demo/udp_stream/control/: compile.sh  udp_video_client  udp_video_client.cpp  web_server.py
demo/udp_stream/control/templates/: index.html
demo/udp_stream/remote/: udp_video_server  udp_video_server.cpp
docs/: complexity_analysis.md  dietpi_setup.md  executorch_setup.md  notes.md  ref.md  remote-documentation.md
docs/AE-Compression/: api-setup.md  training-setup.md
docs/Control-Assembly/Files/: AZI_RasPi_Z2W_op1A_rev1_bottom.stl
docs/Kiwi-Drive-Assembly/Files/: 5Wheel.stl  5wheelroller.stl  MotorMount.stl
docs/OrangePi-Remote-Enclosure-Assembly/: OrangePi-Remote-Enclosure-Assembly-Instructions.docx  ~$angePi-Remote-Enclosure-Assembly-Instructions.docx
docs/Remote-Enclosure-Assembly/Files/: PiMountBracket.stl  RemoteCasingBackCover.stl  RemoteCasingBody.stl
docs/reports/: biweekly_report_1.md
pte/control/: img_dec_default_xnnpack_q8.pte  img_dec_xnnpack_fp32.pte  img_dec_xnnpack_q8.pte
pte/remote/: img_enc_small_xnnpack_fp32.pte  img_enc_small_xnnpack_q8.pte  img_enc_xnnpack_fp32.pte  img_enc_xnnpack_q8.pte
software/: README.txt
software/client/: README.md  app.py  requirements.txt  setup.py  start_control.py
software/client/client_app/: __init__.py  app.py
software/client/config/: control_config.json
software/client/templates/: index.html
software/client/tests/: README.txt
software/control/: control_runner.h
software/embedded/: README.txt  platformio.ini
software/embedded/include/: InteruptPWMInput.cpp  InteruptPWMInput.h
software/embedded/src/: OLD.txt  main.cpp
software/ml/video/: config.py  data_loader.py  decoder.py  encoder.py  entropy_models.py  model.py  trainer.py  utils.py  video_model.py  video_trainer.py
software/raw_stream/: README.md
software/raw_stream/control/: compile.sh  raw_video_client.cpp  web_client.py
software/raw_stream/remote/: compile.sh  raw_video_server.cpp
software/remote/: remote_runner.h
software/training/share/: compile.py  entropy_models.py
software/training/video/: config.py  decoder.py  encoder.py  model.py  trainer.py
software/udp_stream/: README.md
software/udp_stream/control/: compile_optimized.sh  config.json  optimized_udp_client.cpp  udp_video_client  udp_video_client.cpp
software/udp_stream/remote/: compile.sh  udp_video_server.cpp
src/: .gitignore  CMakeLists.txt  README.md  __init__.py  compile.py  main.py  setup.md
src/ControlRunner/: CMakeLists.txt
src/ControlRunner/cmake/: ControlRunnerConfig.cmake.in
src/ControlRunner/pte/: img_dec_small_xnnpack_fp32.pte  img_dec_small_xnnpack_q8.pte
src/ControlRunner/src/: control_runner.cpp
src/RemoteRunner/: CMakeLists.txt
src/RemoteRunner/include/: remote_runner.h
src/RemoteRunner/src/: remote_runner.cpp
src/control/: control_runner.cpp
src/control_runner/: CMakeLists.txt
src/control_runner/cmake/: ControlRunnerConfig.cmake.in
src/control_runner/include/: control_runner.h
src/control_runner/src/: control_runner.cpp
src/cpp_exts/: __init__.py  ops.py  rans.cpp  setup.py
src/my_rans/: rans_ops.cpp  setup.py
src/remote/: remote_runner.cpp
src/remote_runner/: CMakeLists.txt
src/remote_runner/cmake/: remote_runner-config.cmake.in
src/remote_runner/include/: remote_runner.h
src/remote_runner/pte/: img_enc_default_xnnpack_q8.pte
src/remote_runner/src/: remote_runner.cpp
src/training/: __init__.py  main.py
src/training/share/: __init__.py  entropy_models.py  utils.py
src/training/video/: MS_SSIM_L1_loss.py  __init__.py  bottlenecks.py  compiler.py  config.py  decoder copy.py  decoder.py  encoder copy.py  encoder.py  loader.py  model.py  ms_ssim_l1_loss.py  simulate.py  trainer.py  utils.py
test/: .gitignore  libs_test.cpp  libs_test_bin  run.sh  run_test.sh
test/src/: libs_test.cpp
(+17 files in other folders)
